# aoc2024

./: .pre-commit-config.yaml  pyproject.toml
day01/: solution1.py  solution2.py
day02/: solution1.py  solution2.py
day03/: solution1.py  solution2.py
day04/: solution1.py  solution2.py
day05/: solution1.py  solution2.py
day06/: solution1.py  solution2.py
day07/: solution1.py  solution2.py
day08/: solution1.py  solution2.py
day09/: solution1.py  solution2.py
day10/: solution1.py  solution2.py
day11/: solution1.py  solution2.py
day12/: solution1.py  solution2.py
day13/: solution1.py  solution2.py
day14/: solution1.py  solution2.py
day15/: solution1.py  solution2.py
day16/: solution1.py  solution2.py
day17/: solution1.py  solution2.py
day18/: solution1.py  solution2.py
day19/: solution1.py  solution2.py
day20/: solution1.py  solution2.py
day22/: solution1.py  solution2.py
